--- a/app/src/main/res/values-sw600dp/dimens.xml
+++ b/app/src/main/res/values-sw600dp/dimens.xml
@@ -10,6 +10,12 @@
     <dimen name="connexion_marge_verticale_champs_texte">14dp</dimen>
     <dimen name="connexion_marge_verticale_autre">20dp</dimen>
 
+    <dimen name="inscription_largeur_champs">250dp</dimen>
+    <dimen name="inscription_taille_titres">20sp</dimen>
+    <dimen name="inscription_marge_verticale_champs_texte">14dp</dimen>
+
+    <dimen name="carte_marges">16dp</dimen>
+
     <dimen name="pied_page_hauteur_min">70dp</dimen>
     <dimen name="pied_page_icone_padding_haut">15dp</dimen>
     <dimen name="pied_page_icone_espace_barre">12dp</dimen>
